# Fixed-Income-Desk-Quant-Platform

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  pages.yml
apps/: run_daily_desk_report.cpp  run_full_desk_day.cpp  run_intraday_simulation.cpp
data/curves/: curve_today.csv
data/market_events/: simulated_ticks.csv
data/portfolio/: portfolio.csv
docs/: METHODOLOGY.md  PROJECT_AUDIT.md  index.html
docs/assets/: style.css
docs/demo/: index.html
docs/event-study/: index.html
docs/methodology/: index.html
fixed-income-desk-quant-platform/: .gitignore  CMakeLists.txt  README.md  requirements.txt
fixed-income-desk-quant-platform/apps/: run_daily_desk_report.cpp  run_intraday_simulation.cpp
fixed-income-desk-quant-platform/data/curves/: curve_yesterday.csv
fixed-income-desk-quant-platform/data/market_events/: simulated_ticks.csv
fixed-income-desk-quant-platform/include/execution/: ExecutionAnalytics.hpp  ExecutionSimulator.hpp  LimitOrderBook.hpp
fixed-income-desk-quant-platform/include/rates/: PnLExplain.hpp  Portfolio.hpp  RiskEngine.hpp  YieldCurve.hpp
fixed-income-desk-quant-platform/python/: generate_desk_summary.py  plot_execution.py  plot_pnl.py  plot_risk.py
fixed-income-desk-quant-platform/scripts/: build.sh  clean.sh  run_full_demo.ps1  run_full_demo.sh  run_tests.sh
fixed-income-desk-quant-platform/src/core/: CsvReader.cpp
fixed-income-desk-quant-platform/src/execution/: ExecutionAnalytics.cpp  (+2 more)
fixed-income-desk-quant-platform/tests/: test_bond_pricing.cpp  test_execution_analytics.cpp  test_order_book.cpp  test_risk_engine.cpp  test_swap_pricing.cpp
include/core/: CsvReader.hpp  Date.hpp  Utils.hpp
include/execution/: MarketDataSimulator.hpp  MarketEvent.hpp
include/rates/: Cashflow.hpp  FixedRateBond.hpp  VanillaSwap.hpp
python/: build_fomc_event_study.py  compare_on_the_run_to_government_curve.py  dashboard.py  generate_desk_summary.py  plot_curves.py  plot_execution.py  plot_fomc_event_study.py  plot_pnl.py  plot_risk.py  prepare_on_the_run_curve.py
scripts/: build.sh  build_pages_site.sh  clean.sh  run_full_demo.ps1  run_full_demo.sh  run_tests.sh
src/core/: Date.cpp  Utils.cpp
src/execution/: ExecutionAnalytics.cpp  ExecutionSimulator.cpp  MarketDataSimulator.cpp
src/rates/: FixedRateBond.cpp  PnLExplain.cpp  VanillaSwap.cpp  YieldCurve.cpp
tests/: TestFramework.hpp  TestMain.cpp  test_bond_pricing.cpp  test_execution_analytics.cpp  test_pnl_explain.cpp  test_risk_engine.cpp  test_swap_pricing.cpp  test_yield_curve.cpp
(+5 files in other folders)
